타이머 기능 일부 구현

--- a/style.css
+++ b/style.css
@@ -1,31 +1,34 @@
 :root {
-    --main-color: #E16868;
-    --first-color: #FCB0AC;
-    --second-color: #FFE4E0;
-    --comp-color: #00C2FF;
+    --head-color: #C65146;
+    --body-color: #EC6A5C;
+    --hover-color: #AF4034;
+    --text-color: #FFE4E0;
+    
+
 }
 
 body {
     margin: 0;
     font-family: 'jua';
+    background: var(--body-color);
 }
 
 a {
     text-decoration: none;
-    color: var(--second-color);
+    color: var(--text-color);
 }
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    background: var(--main-color);
+    background: var(--head-color);
     padding: 4px 24px;
 }
 
 .navbar__logo {
     font-size: 24px;
-    color: var(--second-color);
+    color: var(--text-color);
     padding: 6px 12px;
 }
 
@@ -40,7 +43,7 @@ a {
 }
 .navbar__menu li:hover {
     border-radius: 4px;
-    background-color: var(--first-color);
+    background-color: var(--hover-color);
 }
 
 .navbar__toggleBtn {
@@ -51,7 +54,41 @@ a {
     font-size: 24px;
 }
 
-@media screen and (max-width: 480px) {
+.timer {
+    border-radius: 10px;
+    background: rgba(255,255,255,0.1);
+
+    margin: 10vh auto;
+    width: 580px;
+
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+}
+
+.timer__clock {
+    color: var(--text-color);
+    font-size: 200px;
+}
+
+.timer__button {
+    background: none;
+    border: none;
+
+    font-size: 100px;
+}
+.timer__button__pause {
+    display: none;
+}
+hr {
+    border: 1px solid rgba(0,0,0,0.5);
+}
+
+#relax {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
     .navbar {
         flex-direction: column;
         align-items: flex-start;
@@ -75,5 +112,15 @@ a {
 
     .navbar__menu.active {
         display: flex;
+    }
+
+    .timer {
+        width: 95%;
+    }
+    .timer__clock {
+        font-size: 33vw;
+    }
+    .timer__button {
+        font-size: 16.5vw;
     }
 }
